SFUSA/force-app/main/default/objects/Case/fields/Complaint_Source__c.field-meta.xml
<CustomField>
        <fullName>Complaint_Source__c</fullName>
        <label>Complaint Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bailment</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Suntory Critical</fullName>
                </value>
                <value>
                    <fullName>Bailment State Warehouse</fullName>
                    <isActive>false</isActive>
                    <label>Bailment State Warehouse</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>