SFUSA/force-app/main/default/objects/Case/fields/Compliance_Flagset__c.field-meta.xml
<CustomField>
        <fullName>Compliance_Flagset__c</fullName>
        <label>Compliance Flagset</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No_Approval_Required</fullName>
                </value>
                <value>
                    <fullName>Brand_Registration__Kicked_Off</fullName>
                </value>
                <value>
                    <fullName>Brand_Registration__All_Sub_Cases_Closed</fullName>
                </value>
                <value>
                    <fullName>Quote_Request__Availability_Set</fullName>
                </value>
                <value>
                    <fullName>Quote_Request__Pricing_Set</fullName>
                </value>
                <value>
                    <fullName>Price_Posting__Submission_Confirmation</fullName>
                </value>
                <value>
                    <fullName>Price_Posting__State_Manager_Approval</fullName>
                </value>
                <value>
                    <fullName>Price_Filing__Has_Blank_Workbook</fullName>
                </value>
                <value>
                    <fullName>Price_Filing__Has_Finalized_Workbook</fullName>
                </value>
                <value>
                    <fullName>Discount__Has_Discount_Document</fullName>
                </value>
                <value>
                    <fullName>General__Has_Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>