SFUSA/force-app/main/default/objects/Case/fields/Compliant_Pro_No_Updated_Within_SLA__c.field-meta.xml
<CustomField>
        <fullName>Compliant_Pro_No_Updated_Within_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliant Pro No. Updated Within SLA</label>
        <type>Checkbox</type>
    </CustomField>