SFUSA/force-app/main/default/objects/Case/fields/Compliant_Pro_Number__c.field-meta.xml
<CustomField>
        <fullName>Compliant_Pro_Number__c</fullName>
        <label>Compliant Pro Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>