SFUSA/force-app/main/default/objects/Case/fields/Constant_1__c.field-meta.xml
<CustomField>
        <fullName>Constant_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>