SFUSA/force-app/main/default/objects/Case/fields/Consumer__c.field-meta.xml
<CustomField>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Consumer for a Quality Claim</description>
        <inlineHelpText>Consumer for a Quality Claim</inlineHelpText>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </CustomField>