SFUSA/force-app/main/default/objects/Case/fields/Consumer_State__c.field-meta.xml
<CustomField>
        <fullName>Consumer_State__c</fullName>
        <description>This field is used to store the Consumer State from Account's Person Mailing State</description>
        <inlineHelpText>This field is used to store the Consumer State from Account's Person Mailing State</inlineHelpText>
        <label>Consumer State</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>