SFUSA/force-app/main/default/objects/Case/fields/Contact_Country__c.field-meta.xml
<CustomField>
        <fullName>Contact_Country__c</fullName>
        <formula>Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Country</label>
        <type>Text</type>
    </CustomField>