SFUSA/force-app/main/default/objects/Case/fields/Contact_Method__c.field-meta.xml
<CustomField>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>