SFUSA/force-app/main/default/objects/Case/fields/Contaminate__c.field-meta.xml
<CustomField>
        <fullName>Contaminate__c</fullName>
        <label>Contaminate</label>
        <type>TextArea</type>
    </CustomField>