SFUSA/force-app/main/default/objects/Case/fields/Contractor__c.field-meta.xml
<CustomField>
        <fullName>Contractor__c</fullName>
        <formula>Contact.Contractor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor</label>
        <type>Checkbox</type>
    </CustomField>