SFUSA/force-app/main/default/objects/Case/fields/Corporate_Card_Application_Date__c.field-meta.xml
<CustomField>
        <fullName>Corporate_Card_Application_Date__c</fullName>
        <label>Corporate Card Application Date</label>
        <type>Date</type>
    </CustomField>