SFUSA/force-app/main/default/objects/Case/fields/Correct_carrier_code__c.field-meta.xml
<CustomField>
        <fullName>Correct_carrier_code__c</fullName>
        <label>Correct carrier code</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>