SFUSA/force-app/main/default/objects/Case/fields/Correct_Invoice_Reason__c.field-meta.xml
<CustomField>
        <fullName>Correct_Invoice_Reason__c</fullName>
        <label>Correct Invoice Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Function (Internal Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>