SFUSA/force-app/main/default/objects/Case/fields/Correct_SCC__c.field-meta.xml
<CustomField>
        <fullName>Correct_SCC__c</fullName>
        <label>Correct SCC</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>