SFUSA/force-app/main/default/objects/Case/fields/Country_of_Analyst__c.field-meta.xml
<CustomField>
        <fullName>Country_of_Analyst__c</fullName>
        <formula>Owner:User.Country</formula>
        <label>Country of Analyst</label>
        <type>Text</type>
    </CustomField>