SFUSA/force-app/main/default/objects/Case/fields/CPro_Approval__c.field-meta.xml
<CustomField>
        <fullName>CPro_Approval__c</fullName>
        <label>CPro Approval?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>