SFUSA/force-app/main/default/objects/Case/fields/Created_Time__c.field-meta.xml
<CustomField>
        <fullName>Created_Time__c</fullName>
        <formula>MID (TEXT ( CreatedDate - (6/24)), 12, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedTime</label>
        <type>Text</type>
    </CustomField>