SFUSA/force-app/main/default/objects/Case/fields/Credit_Amount__c.field-meta.xml
<CustomField>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>