SFUSA/force-app/main/default/objects/Case/fields/Current_Limit__c.field-meta.xml
<CustomField>
        <fullName>Current_Limit__c</fullName>
        <label>Current Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>