SFUSA/force-app/main/default/objects/Case/fields/Current_Orders_Amount__c.field-meta.xml
<CustomField>
        <fullName>Current_Orders_Amount__c</fullName>
        <label>Current Orders Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>