SFUSA/force-app/main/default/objects/Case/fields/Current_Risk_Rating__c.field-meta.xml
<CustomField>
        <fullName>Current_Risk_Rating__c</fullName>
        <label>Current Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YLW</fullName>
                </value>
                <value>
                    <fullName>YMD</fullName>
                </value>
                <value>
                    <fullName>YHG</fullName>
                </value>
                <value>
                    <fullName>YOU</fullName>
                </value>
                <value>
                    <fullName>YNW</fullName>
                </value>
                <value>
                    <fullName>YWT</fullName>
                </value>
                <value>
                    <fullName>YFX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>