SFUSA/force-app/main/default/objects/Case/fields/Customer__c.field-meta.xml
<CustomField>
        <fullName>Customer__c</fullName>
        <formula>Contact.Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Checkbox</type>
    </CustomField>