SFUSA/force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>