SFUSA/force-app/main/default/objects/Case/fields/Customer_Number__c.field-meta.xml
<CustomField>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>