SFUSA/force-app/main/default/objects/Case/fields/CustomRequired_del__c.field-meta.xml
<CustomField>
        <fullName>CustomRequired_del__c</fullName>
        <label>CustomRequired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>