SFUSA/force-app/main/default/objects/Case/fields/Date_Financials_Received__c.field-meta.xml
<CustomField>
        <fullName>Date_Financials_Received__c</fullName>
        <label>Date Financials Received</label>
        <type>Date</type>
    </CustomField>