SFUSA/force-app/main/default/objects/Case/fields/Date_Submitted_to_Billing__c.field-meta.xml
<CustomField>
        <fullName>Date_Submitted_to_Billing__c</fullName>
        <inlineHelpText>This is the date that an Order Claim was submitted to Billing via a Third Party Sub-Case</inlineHelpText>
        <label>Date Submitted to Billing</label>
        <type>Date</type>
    </CustomField>