SFUSA/force-app/main/default/objects/Case/fields/Delivery_Number__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>