SFUSA/force-app/main/default/objects/Case/fields/Distibutor_Currency__c.field-meta.xml
<CustomField>
        <fullName>Distibutor_Currency__c</fullName>
        <label>Distibutor Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>VEB</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>