SFUSA/force-app/main/default/objects/Case/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>