SFUSA/force-app/main/default/objects/Case/fields/Document_Change_Description__c.field-meta.xml
<CustomField>
        <fullName>Document_Change_Description__c</fullName>
        <label>Document Change Description</label>
        <type>TextArea</type>
    </CustomField>