SFUSA/force-app/main/default/objects/Case/fields/Document_Types__c.field-meta.xml
<CustomField>
        <fullName>Document_Types__c</fullName>
        <label>Document Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
                <value>
                    <fullName>Order Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Direct Import Invoice</fullName>
                </value>
                <value>
                    <fullName>Custom Clearing Document</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Proforma</fullName>
                </value>
                <value>
                    <fullName>Certificate of Analysis</fullName>
                </value>
                <value>
                    <fullName>Certificate of Origin</fullName>
                </value>
                <value>
                    <fullName>Packing List</fullName>
                </value>
                <value>
                    <fullName>Certificate of Freesale</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>Certificate of Age</fullName>
                </value>
                <value>
                    <fullName>Annex VIII</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>