SFUSA/force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
        <fullName>Due_Date__c</fullName>
        <defaultValue>IF($RecordType.Name = 'Brand Registration', TODAY()+14, NULL)</defaultValue>
        <description>Date that the case must be completed by. This field is used by Compliance</description>
        <inlineHelpText>Date that the case must be completed by</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </CustomField>