SFUSA/force-app/main/default/objects/Case/fields/Effective_Start_Date_of_Change__c.field-meta.xml
<CustomField>
        <fullName>Effective_Start_Date_of_Change__c</fullName>
        <label>Effective Start Date of Change</label>
        <type>Date</type>
    </CustomField>