SFUSA/force-app/main/default/objects/Case/fields/Email_Address__c.field-meta.xml
<CustomField>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>