SFUSA/force-app/main/default/objects/Case/fields/Email_Sent_to_Esker__c.field-meta.xml
<CustomField>
        <fullName>Email_Sent_to_Esker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked once the attachments are sent from a case to Esker for processing.</description>
        <inlineHelpText>This is checked if the attachments related to the case are sent to Esker for processing</inlineHelpText>
        <label>Email Sent to Esker</label>
        <type>Checkbox</type>
    </CustomField>