SFUSA/force-app/main/default/objects/Case/fields/Email_to_Case__c.field-meta.xml
<CustomField>
        <fullName>Email_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email to Case</label>
        <type>Checkbox</type>
    </CustomField>