SFUSA/force-app/main/default/objects/Case/fields/Employee__c.field-meta.xml
<CustomField>
        <fullName>Employee__c</fullName>
        <formula>Contact.Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Checkbox</type>
    </CustomField>