SFUSA/force-app/main/default/objects/Case/fields/Employee_ID__c.field-meta.xml
<CustomField>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>