SFUSA/force-app/main/default/objects/Case/fields/Employee_Location__c.field-meta.xml
<CustomField>
        <fullName>Employee_Location__c</fullName>
        <label>Employee Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </CustomField>