SFUSA/force-app/main/default/objects/Case/fields/Employee_Name__c.field-meta.xml
<CustomField>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>