SFUSA/force-app/main/default/objects/Case/fields/Employee_Number__c.field-meta.xml
<CustomField>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>