SFUSA/force-app/main/default/objects/Case/fields/Employee_Vendor_Code__c.field-meta.xml
<CustomField>
        <fullName>Employee_Vendor_Code__c</fullName>
        <label>Employee Vendor Code</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>