SFUSA/force-app/main/default/objects/Case/fields/Error_Rework_Type__c.field-meta.xml
<CustomField>
        <fullName>Error_Rework_Type__c</fullName>
        <label>Error Rework Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original Upload Error not Fixed 1st time</fullName>
                </value>
                <value>
                    <fullName>Original Pricing Error not Fixed 1st time</fullName>
                </value>
                <value>
                    <fullName>Original PGI Error not Fixed 1st time</fullName>
                </value>
                <value>
                    <fullName>Original Costing Error not Fixed 1st time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>