SFUSA/force-app/main/default/objects/Case/fields/Escalated_Form_Description__c.field-meta.xml
<CustomField>
        <fullName>Escalated_Form_Description__c</fullName>
        <label>Escalated Form Description</label>
        <type>TextArea</type>
    </CustomField>