SFUSA/force-app/main/default/objects/Case/fields/Escalation_1__c.field-meta.xml
<CustomField>
        <fullName>Escalation_1__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Escalation 1</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>