SFUSA/force-app/main/default/objects/Case/fields/Escalation_2__c.field-meta.xml
<CustomField>
        <fullName>Escalation_2__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Escalation 2</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>